Support programs stored in directory `.bach/src`